# swm_experimental

./: CMakeLists.txt
data/: poselists.yaml
launch/: .pose_loader.launch.swp  pose_loader.launch
scripts/: .semantic_pose_handler.py.swp  polling_table.py  semantic_pose_handler.py
semantic_region_handler/: CMakeLists.txt  package.xml  setup.py
semantic_region_handler/data/: .ar_list.yaml.swp  .table_list.yaml.swp  table_list.yaml
semantic_region_handler/launch/: table_handler.launch  table_loader.launch
semantic_region_handler/msg/: TablePose.msg
semantic_region_handler/scripts/: alvar_ar_handler.py  circle_region_handler.py  radius_region_handler.py  semantic_region_handler.py  table_loader.py  table_poller.py
semantic_region_handler/src/semantic_region_handler/: __init__.py  region_handler.py  table_poller.py
semantic_region_handler/srv/: AddSemanticRegion.srv  GetSemanticRegion.srv
srv/: GetSemanticPose.srv
swm_experimental/: README.md  package.xml
swm_experimental/scripts/: .semantic_circle_handler.py.swp  polling_table.py  pose_loader.py  semantic_circle_handler.py
swm_experimental/srv/: AddSemanticPose.srv
